# SBM

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
demo_SBM/: demo_runSBM.py  example_runSBM.sh  plot_results.ipynb
src/SBM/MonteCarlo/: C_MonteCarlo.pyx  setup_MCMC.py
src/SBM/MonteCarlo/MCMC_Potts/: MonteCarlo_PottsMod.cpp  make_mcmc_Potts.sh  setup_mcmc_Potts.py
src/SBM/SBM_GD/: SBM_proteins.py
src/SBM/SCA/: sca_pruning.py
src/SBM/utils/: utils.py  utils_plot.py  utils_plot_energies.py
