[metadata]
name = SBM
version = 0.0.1
author = Marion
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rionma8/SBM
project_urls =
    Bug Tracker = https://github.com/Rionma8/SBM/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
